{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 1285,
  "lineage": "4dc25a3a-8a03-4298-6914-e2689d9e94c2",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:437473173423:security-group/sg-0ec92a4694aaafe60",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0ec92a4694aaafe60",
            "ingress": [],
            "name": "ingress-task-cluster-cluster-20251028112429205900000010",
            "name_prefix": "ingress-task-cluster-cluster-",
            "owner_id": "437473173423",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ingress-task-cluster-cluster"
            },
            "tags_all": {
              "Name": "ingress-task-cluster-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ab50e1b33cb835c0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:437473173423:security-group/sg-0e9697045112601c6",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-0e9697045112601c6",
            "ingress": [],
            "name": "ingress-task-cluster-node-20251028112429279500000011",
            "name_prefix": "ingress-task-cluster-node-",
            "owner_id": "437473173423",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ingress-task-cluster-node",
              "kubernetes.io/cluster/ingress-task-cluster": "owned"
            },
            "tags_all": {
              "Name": "ingress-task-cluster-node",
              "kubernetes.io/cluster/ingress-task-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ab50e1b33cb835c0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-2657191558",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ec92a4694aaafe60",
            "security_group_rule_id": "sgr-0632b0249b60afb94",
            "self": false,
            "source_security_group_id": "sg-0e9697045112601c6",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-907171064",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0e9697045112601c6",
            "security_group_rule_id": "sgr-0425a68ee4f542490",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-3649251738",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e9697045112601c6",
            "security_group_rule_id": "sgr-03c7e0ec111df51d9",
            "self": false,
            "source_security_group_id": "sg-0ec92a4694aaafe60",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-816463961",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e9697045112601c6",
            "security_group_rule_id": "sgr-09e2337b57eb6d351",
            "self": false,
            "source_security_group_id": "sg-0ec92a4694aaafe60",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-4192741327",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e9697045112601c6",
            "security_group_rule_id": "sgr-03a9f427563cf5ba6",
            "self": false,
            "source_security_group_id": "sg-0ec92a4694aaafe60",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-3937672174",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e9697045112601c6",
            "security_group_rule_id": "sgr-0f5838046a837e4a0",
            "self": false,
            "source_security_group_id": "sg-0ec92a4694aaafe60",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-2383751205",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e9697045112601c6",
            "security_group_rule_id": "sgr-032da61b93cb5882e",
            "self": false,
            "source_security_group_id": "sg-0ec92a4694aaafe60",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-1601512335",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e9697045112601c6",
            "security_group_rule_id": "sgr-00e84203f371049ce",
            "self": false,
            "source_security_group_id": "sg-0ec92a4694aaafe60",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-527141036",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e9697045112601c6",
            "security_group_rule_id": "sgr-0715dadee93ce5c7f",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-3292617769",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e9697045112601c6",
            "security_group_rule_id": "sgr-08a86cd240bac03f4",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-1612644294",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0e9697045112601c6",
            "security_group_rule_id": "sgr-034c75fa379cd4e41",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a89edfe51446ebd5",
            "arn": "arn:aws:ec2:eu-north-1:437473173423:elastic-ip/eipalloc-0a89edfe51446ebd5",
            "domain": "vpc",
            "id": "eipalloc-0a89edfe51446ebd5",
            "network_border_group": "eu-north-1",
            "public_dns": "ec2-13-49-154-64.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.49.154.64",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "ingress-task-nat-eip-eu-north-1a"
            },
            "tags_all": {
              "Name": "ingress-task-nat-eip-eu-north-1a"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available_azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:437473173423:internet-gateway/igw-08b83e49fbe450b0e",
            "id": "igw-08b83e49fbe450b0e",
            "owner_id": "437473173423",
            "tags": {
              "Name": "ingress-task-igw"
            },
            "tags_all": {
              "Name": "ingress-task-igw"
            },
            "vpc_id": "vpc-0ab50e1b33cb835c0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a89edfe51446ebd5",
            "association_id": "eipassoc-066779c37e2cfce2b",
            "connectivity_type": "public",
            "id": "nat-011bb2f231cd34085",
            "network_interface_id": "eni-04f9de015e1d3cc4f",
            "private_ip": "10.0.1.131",
            "public_ip": "13.49.154.64",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-021679b56c3bda68e",
            "tags": {
              "Name": "ingress-task-nat-gw-eu-north-1a"
            },
            "tags_all": {
              "Name": "ingress-task-nat-gw-eu-north-1a"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available_azs",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0af8c3450db79934c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-011bb2f231cd34085",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0af8c3450db79934c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available_azs",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-08b83e49fbe450b0e",
            "id": "r-rtb-0ccbd8e1b5b7112f91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ccbd8e1b5b7112f9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:437473173423:route-table/rtb-0af8c3450db79934c",
            "id": "rtb-0af8c3450db79934c",
            "owner_id": "437473173423",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "ingress-task-private-rt"
            },
            "tags_all": {
              "Name": "ingress-task-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ab50e1b33cb835c0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:437473173423:route-table/rtb-0ccbd8e1b5b7112f9",
            "id": "rtb-0ccbd8e1b5b7112f9",
            "owner_id": "437473173423",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "ingress-task-public-rt"
            },
            "tags_all": {
              "Name": "ingress-task-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ab50e1b33cb835c0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0213da5cfec544d03",
            "route_table_id": "rtb-0af8c3450db79934c",
            "subnet_id": "subnet-05d0f9822ccdf687b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available_azs",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0238f94b22b9f82da",
            "route_table_id": "rtb-0af8c3450db79934c",
            "subnet_id": "subnet-0ef405b019598fc23"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available_azs",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00b8bce252a65b897",
            "route_table_id": "rtb-0af8c3450db79934c",
            "subnet_id": "subnet-0b23e72fd14167d5a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available_azs",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b4a67af52750b7e0",
            "route_table_id": "rtb-0ccbd8e1b5b7112f9",
            "subnet_id": "subnet-021679b56c3bda68e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available_azs",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-079d24f8263b9e96c",
            "route_table_id": "rtb-0ccbd8e1b5b7112f9",
            "subnet_id": "subnet-0c7e68a58884f6ff2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available_azs",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0909f7d231e320e54",
            "route_table_id": "rtb-0ccbd8e1b5b7112f9",
            "subnet_id": "subnet-01ed6476af84d6015"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available_azs",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:437473173423:subnet/subnet-05d0f9822ccdf687b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05d0f9822ccdf687b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "437473173423",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ingress-task-private-subnet-eu-north-1a",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "ingress-task-private-subnet-eu-north-1a",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0ab50e1b33cb835c0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available_azs",
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:437473173423:subnet/subnet-0ef405b019598fc23",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ef405b019598fc23",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "437473173423",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ingress-task-private-subnet-eu-north-1b",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "ingress-task-private-subnet-eu-north-1b",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0ab50e1b33cb835c0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available_azs",
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:437473173423:subnet/subnet-0b23e72fd14167d5a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1c",
            "availability_zone_id": "eun1-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b23e72fd14167d5a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "437473173423",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ingress-task-private-subnet-eu-north-1c",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "ingress-task-private-subnet-eu-north-1c",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0ab50e1b33cb835c0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available_azs",
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:437473173423:subnet/subnet-021679b56c3bda68e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-021679b56c3bda68e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "437473173423",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ingress-task-public-subnet-eu-north-1a",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "ingress-task-public-subnet-eu-north-1a",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0ab50e1b33cb835c0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available_azs",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:437473173423:subnet/subnet-0c7e68a58884f6ff2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c7e68a58884f6ff2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "437473173423",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ingress-task-public-subnet-eu-north-1b",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "ingress-task-public-subnet-eu-north-1b",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0ab50e1b33cb835c0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available_azs",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:437473173423:subnet/subnet-01ed6476af84d6015",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1c",
            "availability_zone_id": "eun1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01ed6476af84d6015",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "437473173423",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ingress-task-public-subnet-eu-north-1c",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "ingress-task-public-subnet-eu-north-1c",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0ab50e1b33cb835c0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available_azs",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:437473173423:vpc/vpc-0ab50e1b33cb835c0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c9ac8ecb64817e97",
            "default_route_table_id": "rtb-05ee9a29b0b64103b",
            "default_security_group_id": "sg-00a9350fc295e1562",
            "dhcp_options_id": "dopt-0a3764a584754c7ae",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ab50e1b33cb835c0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05ee9a29b0b64103b",
            "owner_id": "437473173423",
            "tags": {
              "Name": "ingress-task-vpc"
            },
            "tags_all": {
              "Name": "ingress-task-vpc"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}